Fix EditIrMacroModal table appearance (dark mode)
Same color as modal, default dark mode table color doesn't have enough contrast with inputs

--- a/frontend/src/css/api_card.css
+++ b/frontend/src/css/api_card.css
@@ -27,3 +27,9 @@ body {
         --chart-tick-color: #eee;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    #ir-macro-modal {
+        --bs-table-bg: transparent;
+    }
+}
