--- a/frontend/src/css/dark_mode.scss
+++ b/frontend/src/css/dark_mode.scss
@@ -41,7 +41,7 @@
         --#{$variable-prefix}body-bg: #{$body-bg};
 
         /* Tables */
-        $table-bg: #212529 !important;
+        $table-bg: #212529;
         $table-hover-bg: #35393f !important;
 
         /* Modals */
